Fix outline on safari

--- a/src/styles/appStyle.css
+++ b/src/styles/appStyle.css
@@ -8,9 +8,6 @@
   src: url('../assets/stintultraexpanded-regular-webfont.woff2') format('woff2');
 }
 
-/* * {
-  outline: 3px dashed red;
-} */
 
 :root {
   /* CSS HEX */
@@ -65,7 +62,7 @@
 }
 
 button {
-  outline: 1px solid white;
+  border: 1px solid white;
   padding: 6px;
   background-color: var(--space-cadet);
   font-size: 1.1rem;
@@ -89,6 +86,10 @@ button:hover{
 button:disabled{
   opacity: 0.5;
   pointer-events: none;
+}
+
+.target{
+  background-color: red;
 }
 
 @keyframes shake {
