--- a/src/styles/headerStyle.css
+++ b/src/styles/headerStyle.css
@@ -31,7 +31,7 @@ header > div{
 #char-dropdown{
  display: block;
  position: relative;
- outline: 3px solid white;
+ border: 3px solid white;
  border-radius: 1rem;
  width: auto;
 
@@ -44,7 +44,7 @@ header > div{
   background-color: var(--palatinate-purple); 
   padding: 10px;
  font-size: clamp(1rem, 3vw, 1.8rem);
- outline: 3px solid white;
+ border: 3px solid white;
  border-radius: 1rem;
  transition: all 1s ease-out;
 }
